:bulb: Added Comment to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <h1>Richard Goode</h1>
-<p>Version Control Essentils</p>
-<P> My son's nme is Wyatt, he is two and a half years old but is as already wise beyind his years. The anticipation I feel as i watch him continue to grow steadily builds as he continues to conquer his journey.</p>
+<p>Version Control Essentials</p>
+<P> My son's name is Wyatt, he is two and a half years old but is as already wise beyond his years. The anticipation I
+    feel as i watch him continue to grow steadily builds as he continues to conquer his journey.</p>
+
+<!--
+    This is a comment for Remote Repositories Exersize 1.
+    -->
