--- a/contact.html
+++ b/contact.html
@@ -1,2 +1,4 @@
 <h1>Richard Goode</h1>
 <p>Version Control Essentils</p>
+<p> Contact Me at <a href="mailto:richard@example.com>richard@example.com">richard@example.com</a></p>
+<p>another try</p>
