--- a/index.html
+++ b/index.html
@@ -3,6 +3,5 @@
 <P> My son's name is Wyatt, he is two and a half years old but is as already wise beyond his years. The anticipation I
     feel as i watch him continue to grow steadily builds as he continues to conquer his journey.</p>
 
-<!--
-    This is a comment for Remote Repositories Exersize 1.
-    -->
+<!--This is a comment for Remote Repositories Exersize 1.-->
+<!--Exercise 1: Pulling Changes -->
