changed element tag, line7

--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
     feel as i watch him continue to grow steadily builds as he continues to conquer his journey.</p>
 
 <!--This is a comment for Remote Repositories Exersize 1.-->
-<!--Exercise 1: Pulling Changes -->
+<p>Exercise 1: Pulling Changes</p>
