--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,9 @@
 <h1>Richard Goode</h1>
 <p>Version Control Essentils</p>
 <p>This is the change i want</p>
+
+
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique omnis consequatur harum quisquam voluptatem
+    dignissimos fugiat, cumque voluptate. Repellendus soluta exercitationem debitis in tempore eligendi illum quia
+    officiis quo et cumque, voluptate fugit? Iure, temporibus laudantium fugiat veritatis consequatur laborum. Itaque
+    qui id tempore sapiente totam nemo necessitatibus ad voluptatum.</p>
